--- a/angular.json
+++ b/angular.json
@@ -25,22 +25,38 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/aos/dist/aos.css",
+              "node_modules/skeleton-elements/css/skeleton-core.css",
+              "node_modules/skeleton-elements/css/skeleton-block.css",
+              "node_modules/skeleton-elements/css/skeleton-effect.css",
+              "node_modules/skeleton-elements/css/skeleton-elements.css",
+              "node_modules/skeleton-elements/css/skeleton-image.css",
+              "node_modules/skeleton-elements/css/skeleton-text.css",
+              "node_modules/skeleton-elements/css/skeleton-avatar.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "5mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "5mb",
+                  "maximumError": "5mb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
                 }
               ],
               "outputHashing": "all"
@@ -73,26 +89,11 @@
           "options": {
             "browserTarget": "business:build"
           }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
-            "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
-          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "d8288de0-9012-4d78-a467-3513fb5b8792"
   }
 }
